# OpenNN

./: CMakeLists.txt  README.md
blank/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
opennn/: CMakeLists.txt  bounding_layer.cpp  bounding_layer.h  conditions_layer.cpp  conditions_layer.h  conjugate_gradient.cpp  conjugate_gradient.h  cross_entropy_error.cpp  cross_entropy_error.h  data_set.cpp  data_set.h  evolutionary_algorithm.cpp  evolutionary_algorithm.h  f1_score_optimization_threshold.cpp  f1_score_optimization_threshold.h  final_solutions_error.cpp  final_solutions_error.h  genetic_algorithm.cpp  genetic_algorithm.h  golden_section_order.cpp  golden_section_order.h  gradient_descent.cpp  gradient_descent.h  growing_inputs.cpp  growing_inputs.h  incremental_order.cpp  incremental_order.h  independent_parameters.cpp  independent_parameters.h  independent_parameters_error.cpp  independent_parameters_error.h  informedness_optimization_threshold.cpp  informedness_optimization_threshold.h  inputs.cpp  inputs.h  inputs_selection_algorithm.cpp  inputs_selection_algorithm.h  instances.cpp  instances.h  inverse_sum_squared_error.cpp  (+97 more)
tests/: CMakeLists.txt  bounding_layer_test.cpp  bounding_layer_test.h  conditions_layer_test.cpp  conditions_layer_test.h  conjugate_gradient_test.cpp  conjugate_gradient_test.h  cross_entropy_error_test.cpp  cross_entropy_error_test.h  data_set_test.cpp  data_set_test.h  evolutionary_algorithm_test.cpp  evolutionary_algorithm_test.h  final_solutions_error_test.cpp  final_solutions_error_test.h  genetic_algorithm_test.cpp  main.cpp  (+113 more)
(+25 files in other folders)
